--- a/eeefff-org2.cabal
+++ b/eeefff-org2.cabal
@@ -6,9 +6,9 @@ cabal-version:      >= 1.10
 executable site
   main-is:          site.hs
   build-depends:    base == 4.*
-                  , hakyll == 4.8.*
+                  , hakyll == 4.9.*
                   , hakyll-sass == 0.2.*
                   , data-default
-                  , hsass
+                  , hsass  == 0.4.2
   ghc-options:      -threaded
   default-language: Haskell2010
