--- a/stack.yaml
+++ b/stack.yaml
@@ -1,17 +1,23 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: nightly-2016-05-23
+resolver: lts-9.11
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+  - hlibsass-0.1.6.0
+  - hakyll-sass-0.2.3
+
 
 # Override default flag values for local packages and extra-deps
-flags: {}
+flags:
+  hlibsass:
+    sharedlibsass: false
+    externallibsass: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
@@ -30,3 +36,8 @@ extra-package-dbs: []
 # Extra directories used by stack for building
 # extra-include-dirs: [/path/to/dir]
 # extra-lib-dirs: [/path/to/dir]
+extra-include-dirs:
+  - /usr/local/Cellar/libsass/3.4.3/include/sass/
+  - /usr/local/Cellar/libsass/3.4.3/include/
+extra-lib-dirs:
+  - /usr/local/Cellar/libsass/3.4.3/lib/
