[engine] Pictures, Paths for all ids and patterns

--- a/eeefff-org2.cabal
+++ b/eeefff-org2.cabal
@@ -17,5 +17,6 @@ executable site
                   , filepath
                   , MissingH
                   , binary
+                  , text
   ghc-options:      -threaded
   default-language: Haskell2010
