ignored temp files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /.stack-work
 .DS_Store
 /css/_cache
+/.nrepl-port
+/figwheel_server.log
+/log
+/main.js
+/target/default/classes/META-INF/maven/eeefff_org_website/eeefff_org_website/pom.properties
+/target
