--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,16 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "private": true,
+  "dependencies": {
+    "bigtext": "^1.0.1",
+    "d3-queue": "~2.0.3",
+    "lodash": "~4.11.1",
+    "foundation-sites": "^6.4.3",
+    "mobile-detect": "hgoebl/mobile-detect.js#~1.3.2",
+    "webfontloader": "^1.6.28",
+    "motion-ui": "^1.2.3",
+    "modernizr": "~3.2.0"
+  }
 }
