--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/W7W"]
 	path = src/W7W
 	url = git@github.com:eehah5ru/w7w-core.git
+[submodule "w7w"]
+	path = w7w
+	url = git@github.com:eehah5ru/w7w-core.git
