[deps] added w7w deps

--- a/eeefff-org2.cabal
+++ b/eeefff-org2.cabal
@@ -18,5 +18,12 @@ executable site
                   , MissingH
                   , binary
                   , text
+                  , attoparsec
+                  , mtl
+                  , errors
+                  , directory
+                  , MissingH
+                  , colour
+
   ghc-options:      -threaded
   default-language: Haskell2010
