--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "mobile-detect": "hgoebl/mobile-detect.js#~1.3.2",
     "webfontloader": "^1.6.28",
     "motion-ui": "^1.2.3",
-    "modernizr": "~3.2.0"
+    "modernizr": "~3.2.0",
+    "df-visible": "^1.2.0"
   }
 }
