--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,8 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-9.11
+# resolver: lts-9.11
+resolver: lts-12.24
 
 # Local packages, usually specified by relative directory name
 packages:
@@ -9,15 +10,24 @@ packages:
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
-  - hlibsass-0.1.6.0
-  - hakyll-sass-0.2.3
-
+  - hlibsass-0.1.8.0
+  - hakyll-sass-0.2.4
+  # - pandoc-2.1.1
+  # - cmark-gfm-0.1.3
+  # - doctemplates-0.2.1
+  # - hslua-0.9.5.1
+  # - hslua-module-text-0.1.2.1
+  # - pandoc-types-1.17.3.1
+  # - skylighting-0.6
+  # - tagsoup-0.14.6
+  # - texmath-0.10.1.1
+  # - ansi-terminal-0.8.0.1
 
 # Override default flag values for local packages and extra-deps
 flags:
   hlibsass:
-    sharedlibsass: false
-    externallibsass: true
+    sharedlibsass: true
+    # externallibsass: true
 
 # Extra package databases containing global packages
 extra-package-dbs: []
@@ -37,7 +47,11 @@ extra-package-dbs: []
 # extra-include-dirs: [/path/to/dir]
 # extra-lib-dirs: [/path/to/dir]
 extra-include-dirs:
-  - /usr/local/Cellar/libsass/3.4.3/include/sass/
-  - /usr/local/Cellar/libsass/3.4.3/include/
+  # - /usr/local/Cellar/libsass/3.4.3/include/sass/
+  # - /usr/local/Cellar/libsass/3.4.3/include/
+  - /usr/local/Cellar/libsass/3.5.5/include/sass/
+  - /usr/local/Cellar/libsass/3.5.5/include/
+
 extra-lib-dirs:
-  - /usr/local/Cellar/libsass/3.4.3/lib/
+  # - /usr/local/Cellar/libsass/3.4.3/lib/
+  - /usr/local/Cellar/libsass/3.5.5/lib/
