--- a/eeefff-org2.cabal
+++ b/eeefff-org2.cabal
@@ -26,5 +26,7 @@ executable site
                   , MissingH
                   , colour
                   , pandoc
+                  , cache
+                  , hashable
   ghc-options:      -threaded
   default-language: Haskell2010
