[deps][infra] add haskell deps for hakyll and w7w

--- a/eeefff-org2.cabal
+++ b/eeefff-org2.cabal
@@ -28,5 +28,7 @@ executable site
                   , pandoc
                   , cache
                   , hashable
+                  , yaml
+                  , containers
   ghc-options:      -threaded
   default-language: Haskell2010
