--- a/eeefff-org2.cabal
+++ b/eeefff-org2.cabal
@@ -5,9 +5,9 @@ cabal-version:      >= 1.10
 
 executable site
   main-is:          site.hs
-  HS-Source-Dirs:   src
+  hs-source-dirs:   src
   build-depends:    base == 4.*
-                  , hakyll == 4.15.*
+                  , hakyll == 4.16.*
                   , hakyll-sass == 0.2.*
                   , data-default
                   -- , hsass  == 0.4.2
